skills page for web

--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -44,6 +44,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Wallpoet" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
