changes in the paths

--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -47,26 +47,26 @@
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-	<link href="bower_components/animate.css/animate.css" rel="stylesheet" />
+	<link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link href="../../bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+	<link href="../../bower_components/animate.css/animate.css" rel="stylesheet" />
 	<link href="../../bower_components/fullpage.js/jquery.fullPage.css" rel="stylesheet" />
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 
 
 	<!-- -------------------------------   angular components   --------------------------- -->
-	<script src="bower_components/angular/angular.js"></script>
-	<script src="bower_components/angular-animate/angular-animate.js"></script>
-	<script src="bower_components/angular-route/angular-route.min.js"></script>
-	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="../../bower_components/angular/angular.js"></script>
+	<script src="../../bower_components/angular-animate/angular-animate.js"></script>
+	<script src="../../bower_components/angular-route/angular-route.min.js"></script>
+	<script src="../../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 
 
 
 	<!-- --------------------------------  MY scripts   ----------------------------------   -->
-	<script src="js/adminApp.js"></script>
-	<script src="js/portfolioController.js"></script>
-	<script src="js/tempController.js"></script>
+	<script src="../js/adminApp.js"></script>
+	<script src="../js/portfolioController.js"></script>
+	<script src="../js/tempController.js"></script>
 
 
 	<title>Puneet Aggarwal</title>
@@ -89,9 +89,9 @@
 
 	<!-- -------------------------------  some important scripts  ------------------------- -->
 
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<srcipt src="bower_components/progressbar.js/dist/progressbar.js"></srcipt>
+	<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<srcipt src="../../bower_components/progressbar.js/dist/progressbar.js"></srcipt>
 	<script src="../../bower_components/bootstrap-progressbar/bootstrap-progressbar.js"></script>
 	<script src="../../bower_components/fullpage.js/vendors/jquery.easings.min.js"></script>
 	<script src="../../bower_components/fullpage.js/jquery.fullPage.min.js"></script>
