--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -24,16 +24,17 @@
 <!--</div>-->
 
     <div id="fullpage">
-        <div class="section" style="background-color: darkslategray">
+        <div class="section" style="background-color: darkslategray; z-index: -1;">
             <!-- -------------------------  basic info division   [ =====   LARGE DEVICES  ===== ]----------------------- -->
             <div id="basic-info" class="container hidden-sm hidden-xs">
                  <!-- -------------  tinted video  ------------- -->
                 <div class="fullscreen-bg video-responsive">
                     <video loop muted autoplay poster="../images/hny.png" class="fullscreen-bg__video">
                         <source data-src="../video/out-5.ogv" type="video/ogg">
+                        <source data-src="" >
                     </video>
-                    <div class="tint">
-                    </div>
+                    <!--<div class="tint">-->
+                    <!--</div>-->
                 </div>
                  <!------------------ heading   ------------- -->
                 <div class="">
