--- a/public/views/index2.html
+++ b/public/views/index2.html
@@ -17,10 +17,6 @@
                                 }
                             )
                         }
-
-                        if(nextIndex == 2){
-
-                        }
                     }
                 });
                 $(".se-pre-con").fadeOut("slow" , function(){
@@ -31,6 +27,7 @@
 
         };
 	</script>
+	<meta name="theme-color" content="#db5945">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
