--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -28,13 +28,13 @@
             <!-- -------------------------  basic info division   [ =====   LARGE DEVICES  ===== ]----------------------- -->
             <div id="basic-info" class="container hidden-sm hidden-xs">
                  <!-- -------------  tinted video  ------------- -->
-                <div class="fullscreen-bg video-responsive">
-                    <video loop muted autoplay poster="../images/hny.png" class="fullscreen-bg__video">
-                        <source data-src="../video/out-5.ogv" type="video/ogg">
-                        <source data-src="" >
+                <div>
+                    <video loop muted  autoplay poster="../images/hny.png" class="fullscreen-bg__video video-responsive" data-keepplaying>
+                        <source src="" data-src="../video/out-5.webm" type="video/webm">
+                        <!--<source src="" data-src="../video/out-5.ogv" type="video/ogg">-->
                     </video>
-                    <!--<div class="tint">-->
-                    <!--</div>-->
+                    <div class="tint">
+                    </div>
                 </div>
                  <!------------------ heading   ------------- -->
                 <div class="">
