superpowers in center for all devices

--- a/public/views/portfolio.html
+++ b/public/views/portfolio.html
@@ -84,7 +84,7 @@
         </div>
         <!------------------------------------------   SUPER POWER SECTION   ------------------------------------------->
         <div class="section" id="superpower">
-            <h5 class="text-center sliding-middle-out roboto" style="color: white; font-size: 6vh; font-family: 'Share Tech Mono', cursive ; z-index: 10; position: absolute">SUPERPOWERS</h5>
+            <h5 class="text-center sliding-middle-out roboto" style="color: white; font-size: 6vh; font-family: 'Share Tech Mono', cursive ; z-index: 10; position: absolute; left: 0;right: 0;margin: 0 auto;">SUPERPOWERS</h5>
 
 
             <div id="skill-background" class="hidden-sm hidden-xs">
