--- a/sideProjects/qiqi/css/style.css
+++ b/sideProjects/qiqi/css/style.css
@@ -103,9 +103,9 @@ body{
 }
 
 .standByBackground {
-  background: #cb2d3e; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #cb2d3e, #ef473a); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #cb2d3e, #ef473a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #30e8bf; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #30e8bf, #ff8235); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #30e8bf, #ff8235); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #FFC107
