--- a/sideProjects/qiqi/css/style.css
+++ b/sideProjects/qiqi/css/style.css
@@ -79,6 +79,7 @@ body{
 }
 
 .defaultBackground {
+  width: 100%;
   background: #4b6cb7;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
